Swagger: Improvements at Get Products Docs
